Fixed issue 1411 add Umbra documentation umbra.dox
R=bruening@google.com

Review URL: https://codereview.appspot.com/79550044

SVN-Revision: 1827

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -102,7 +102,7 @@ add_custom_command(
   # script does not inherit any vars so we must pass them all in
   # Be sure to put a space after -D for 1st arg at least
   ARGS -D srcdir=${PROJECT_SOURCE_DIR}/${tooldir}/docs
-       -D srclist=${PROJECT_SOURCE_DIR}/framework/drmf.dox\;${PROJECT_SOURCE_DIR}/drsyscall/drsyscall.dox\;${PROJECT_SOURCE_DIR}/drsymcache/drsymcache.dox
+       -D srclist=${PROJECT_SOURCE_DIR}/framework/drmf.dox\;${PROJECT_SOURCE_DIR}/drsyscall/drsyscall.dox\;${PROJECT_SOURCE_DIR}/drsymcache/drsymcache.dox\;${PROJECT_SOURCE_DIR}/umbra/umbra.dox
        -Dcommondir=${CMAKE_CURRENT_SOURCE_DIR}
        -Doutfile=${doxyfile}
        -Dversion_number=${TOOL_VERSION_NUMBER}
