--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -107,7 +107,7 @@ WARN_LOGFILE           =
 # top-level pages (we insert additional filenames here in CMake_doxyfile.cmake):
 INPUT                  = using.dox \
                          options-docs.dox release.dox main.dox \
-                         drmf.dox drsyscall.dox drsymcache.dox
+                         drmf.dox drsyscall.dox drsymcache.dox umbra.dox
 FILE_PATTERNS          =
 RECURSIVE              = NO
 EXCLUDE                =
