Add rpath to frontend
SVN-Revision: 1844

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1098,7 +1098,14 @@ if (WIN32)
     LINK_FLAGS "${cur_flags} ${new_flags}")
 endif (WIN32)
 if (USE_DRSYMS AND TOOL_DR_MEMORY)
+  if (DEFINED DynamoRIO_RPATH)
+    set(old_rpath ${DynamoRIO_RPATH})
+  else ()
+    set(old_rpath OFF)
+  endif ()
+  set(DynamoRIO_RPATH ON)
   configure_DynamoRIO_standalone(${toolname})
+  set(DynamoRIO_RPATH ${old_rpath})
   target_link_libraries(${toolname} drinjectlib drconfiglib drfrontendlib)
   if (WIN32)
     set_target_properties(${toolname} PROPERTIES
