Dr. Syscall code cleanup: refactor the Windows ntoskrnl table into its own file.  This makes the files a more manageable size.
SVN-Revision: 1925

--- a/drsyscall/CMakeLists.txt
+++ b/drsyscall/CMakeLists.txt
@@ -64,6 +64,7 @@ if (UNIX)
 else (UNIX)
   set(srcs ${srcs}
     drsyscall_windows.c
+    table_windows_ntoskrnl.c
     drsyscall_wingdi.c)
   if (SYSCALL_DRIVER)
     set(srcs ${srcs}
