Dr. Syscall code cleanup: refactor the Windows ntuser, ntgdi, and kernel32 tables into their own files.  This makes the files a more manageable size, especially once we add full inlined arg info to all of them.
SVN-Revision: 1926

--- a/drsyscall/CMakeLists.txt
+++ b/drsyscall/CMakeLists.txt
@@ -65,6 +65,10 @@ else (UNIX)
   set(srcs ${srcs}
     drsyscall_windows.c
     table_windows_ntoskrnl.c
+    table_windows_ntuser.c
+    table_windows_ntusercall.c
+    table_windows_ntgdi.c
+    table_windows_kernel32.c
     drsyscall_wingdi.c)
   if (SYSCALL_DRIVER)
     set(srcs ${srcs}
