i#1549 Added drsyscall secondary tables to provide the name of the struct for each enum code in different syscalls.
Added NtQueryKey syscall to test solution.

R=bruening@google.com

BUG=1549

Review URL: https://codereview.appspot.com/106140045

SVN-Revision: 1979

--- a/drsyscall/CMakeLists.txt
+++ b/drsyscall/CMakeLists.txt
@@ -65,6 +65,7 @@ else (UNIX)
   set(srcs ${srcs}
     drsyscall_windows.c
     table_windows_ntoskrnl.c
+    table_windows_ntoskrnl_infoclass.c
     table_windows_ntuser.c
     table_windows_ntusercall.c
     table_windows_ntgdi.c
