i#1145: identify cur malloc as prev malloc when 0-sized
-replace_malloc requires an explicit check for the cur malloc when locating
 the prior malloc for reporting auxiliary info on an unaddressable report.

Updates cs2bug test results to ensure we catch any regressions in the
future by splitting wrap from replace (the optional marker for wrap messed
up the matching before).

Fixes issue 1145

SVN-Revision: 1994

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -619,7 +619,7 @@ if (TOOL_DR_MEMORY)
   if ("${CMAKE_SYSTEM_VERSION}" STRLESS "6.2")
     # this test crashes on win8 so we only run it on older Windows
     if (cs2bug_flags STREQUAL "")
-      newtest_nobuild(wrap_cs2bug cs2bug "" "-no_replace_malloc" "" OFF "cs2bug")
+      newtest_nobuild(wrap_cs2bug cs2bug "" "-no_replace_malloc" "" OFF "cs2bug.wrap")
     else ()
       # -no_replace_malloc raises unrecoverable heap errors (i#1161)
       newtest_ex(wrap_cs2bug cs2bug.cpp "" "-no_replace_malloc" "" OFF ${cs2bug_res} 0)
