i#1594: add version properties to Dr. Memory binaries
Adds version properties to all the Dr. Memory binaries.

Adds an install-time check that all binaries have version info.

This is rather a pain: b/c you can't edit the source list of a target, you
have to conditionally (Windows-only) add the .rc file ahead of time.  Then
you add an RC_IS_ define to each target with the real info in a centralized
.rc file b/c there's no nice way to pass defines with spaces via cmake.

Fixes issue 1594

SVN-Revision: 2004

--- a/drsymcache/CMakeLists.txt
+++ b/drsymcache/CMakeLists.txt
@@ -39,6 +39,11 @@ set(srcs
   # add more here
   )
 
+if (WIN32)
+  set(srcs ${srcs} ${PROJECT_SOURCE_DIR}/make/resources.rc)
+  set(DEFINES_NO_D ${DEFINES_NO_D} RC_IS_DRSYMCACHE)
+endif ()
+
 # We only need drsyms for checking whether a module has debug info,
 # but a user of this extension is almost certainly already using
 # drsyms, so it should be fine to unconditionally depend on it.
